--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-owl-carousel": "^2.3.3",
+    "react-wow": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
